<resources>
    <string name="app_name">FAC</string>
    <string name="dados_cliente">Dados do Cliente</string>
    <string name="atendimento">Atendimento</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cliente">Cliente</string>
    <string name="segmento">Segmento</string>
    <string name="panificacao">Panificação</string>
    <string name="confeitaria">Confeitaria</string>
    <string name="industria">Indústria</string>
    <string name="endereco">Endereço</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="email">email</string>
    <string name="vendedor">Vendedor</string>
    <string name="supervisor">Supervisor</string>
    <string name="utiliza_farinha_outra_marca_q">Utiliza farinha de outra marca?</string>
    <string name="nome_marca">Nome da marca - farinha utilizada</string>
    <string name="motivo_solicitacao">Motivo da solicitação</string>
    <string name="tipo_pao_realizado">Tipo(s) de pão(es) realizado(s)</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="produto">Produto</string>
    <string name="qtde_adquirida">Quantidade adquirida</string>
    <string name="qtde_reclamada">Quantidade reclamada</string>
    <string name="dt_validade">Data validade</string>
    <string name="lote">Lote</string>
    <string name="identif_produto">Identificação do Produto</string>
    <string name="dt_atendimento">Data atendimento</string>
    <string name="dt_final_atendimento">Data finalização atendimento</string>
    <string name="reacao_a_assistencia">Reação do cliente à assistência</string>
    <string name="aceitou">Aceitou</string>
    <string name="recusou">Recusou</string>
    <string name="solicita_visita_tecnica_q">Solicita visita técnica?</string>
    <string name="solicita_visita_vendas_q">Solicita visita de vendas?</string>
    <string name="tecnico">Técnico</string>
    <string name="data_hora">Data e hora</string>
    <string name="nome_contato">Nome do contato</string>
    <string name="desc_informacoes_prestadas">Descrição das informações prestadas</string>
    <string name="instr_passadas_resolv_problema_q">Instruções passadas resolveram o problema?</string>
    <string name="providencias_tomadas">Providências tomadas</string>
    <string name="receitas">Receitas</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="receita_cliente">Receita do cliente</string>
    <string name="receita_sugerida">Receita sugerida</string>
    <string name="qtd_cliente">Qtd Cliente</string>
    <string name="qtd_sugerida">Qtd Sugerida</string>
    <string name="porcentagem">%</string>
    <string name="total_soma">Total</string>
    <string name="quantidade">Quantidade</string>
    <string name="processo_aplicado">Processo aplicado</string>
    <string name="tipo_masseira">Tipo de masseira</string>
    <string name="convencional">Convencional</string>
    <string name="semi_rapida">Semi-rápida</string>
    <string name="rapida">Rápida</string>
    <string name="cilindro">Cilindro</string>
    <string name="mistura_1_velicidade">Mistura 1ª velocidade</string>
    <string name="mistura_2_velicidade">Mistura 2ª velocidade</string>
    <string name="temp_agua">Temperatura da água</string>
    <string name="temp_massa">Temperatura da massa</string>
    <string name="temp_forno">Temperatura do forno</string>
    <string name="fermentacao">Fermentação</string>
    <string name="curta">Curta</string>
    <string name="longa">Longa</string>
    <string name="tempo_fermentacao">Tempo de fermentação</string>
    <string name="tempo_forneamento">Tempo de forneamento</string>
    <string name="peso_bola">Peso da bola</string>
    <string name="peso_pao_cru">Peso do pão cru</string>
    <string name="peso_pao_assado">Peso do pão assado</string>
    <string name="qtde_paes_saca">Quantidade de pães por saca</string>
    <string name="qtde_paes_bola">Quantidade de pães por bola</string>
    <string name="conclusao_tecnica">Conclusão técnica</string>
    <string name="avaliacao_cliente">Avaliação do cliente</string>
    <string name="satisfeito">Satisfeito</string>
    <string name="insatisfeito">Insatisfeito</string>
    <string name="obs">Observações</string>
    <string name="minutos">Minutos</string>
    <string name="graus">ºC</string>
    <string name="horas">Horas</string>
    <string name="kilo">Kg</string>
    <string name="grama">gr</string>
    <string name="unidade">un</string>
    <string name="maquinarios">Maquinários</string>
    <string name="fachada">Fachada</string>
    <string name="enviar">Enviar</string>
    <string name="falha_calc_porc">Falha no calculo da porcentagem</string>
</resources>
